--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-SESSION_ID="INCONNU~XD~SpogzIJJ#SGGJDg5i6B5ag7GMtfwXkX4WFK4D_CU19umCerpGbLE"
+SESSION_ID="INCONNU~XD~CoAUTQDC#S66dK7FSRUG_mM9EyX1MmYx9aMRTYQTT7jdmlNEa9vA"
 PREFIX=.
-OWNER_NUMBER=242061048541
+OWNER_NUMBER=50941641272
 SUDO_NUMBER=554488138425
 OWNER_NAME=༆𝙎𝙝𝙞𝙨𝙪𝙞༆
 AUTO_STATUS_SEEN=true
